<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.rokiba.lostandfound.ui.register.RegisterViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.register.RegisterActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_marginTop="@dimen/_25sdp"
                    android:src="@drawable/download"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"/>

                <TextView
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/textColorMain"
                    android:textStyle="bold"
                    android:text="@string/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_marginTop="@dimen/_50sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:inputType="textEmailAddress"
                        android:hint="@string/first_name"
                        android:id="@+id/edFirstName"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>

                    <EditText
                        android:inputType="textEmailAddress"
                        android:hint="@string/last_name"
                        android:id="@+id/edLastName"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <EditText
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:inputType="phone"
                    android:hint="@string/phone"
                    android:id="@+id/edPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:id="@+id/edEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:id="@+id/edPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnRegister"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:text="@string/register"
                    android:layout_marginTop="@dimen/_50sdp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"/>

                <TextView
                    android:id="@+id/btnLogin"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="Have an account? Login here"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </ScrollView>

        <include
            layout="@layout/progress_bar"
            app:viewModel="@{viewModel}" />

    </RelativeLayout>

</layout>