<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.rokiba.lostandfound.ui.main.home.HomeViewModel" />

    </data>

    <RelativeLayout
        android:background="@color/background"
        tools:context=".ui.main.home.HomeFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.card.MaterialCardView
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                app:cardCornerRadius="@dimen/_15sdp"
                app:cardBackgroundColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp">

                <LinearLayout
                    android:layout_marginEnd="@dimen/_25sdp"
                    android:layout_marginStart="@dimen/_25sdp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:textSize="@dimen/_20sdp"
                        android:text="@string/did_you_found_an_item"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:gravity="center"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/add_post_for_this_item_here_so_the_owner_can_reach_you"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <ImageView
                        android:layout_marginTop="@dimen/_10sdp"
                        app:tint="@color/white"
                        android:src="@drawable/ic_add"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                app:cardCornerRadius="@dimen/_15sdp"
                app:cardBackgroundColor="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp">

                <LinearLayout
                    android:layout_marginEnd="@dimen/_25sdp"
                    android:layout_marginStart="@dimen/_25sdp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:textSize="@dimen/_20sdp"
                        android:text="@string/did_you_lost_an_item"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:gravity="center"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/add_post_for_this_item_here_so_the_founder_can_reach_you"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <ImageView
                        android:layout_marginTop="@dimen/_10sdp"
                        app:tint="@color/white"
                        android:src="@drawable/ic_search"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <include
            layout="@layout/progress_bar"
            app:viewModel="@{viewModel}" />

    </RelativeLayout>

</layout>